added fxone remote product page

--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -116,6 +116,168 @@
       </div>
     </div>
   </div>
+  <div class="fxone-fourth-section-wrapper">
+    <div class="container">
+      <div class="fxone-fourth-section-header">
+        <%= image_tag 'inks-icon-3.png', class: 'about-icon m-auto' %>
+        <h3 class="about-first-section-text ownership-second-section-text text-center"><%= t("fxone_remote.fourth_section_title") %></h3>
+      </div>
+      <div class="about-section fxone-section">
+        <div class="about-first-section-left">
+          <%= cl_image_tag("fxone-remote-graphic-3_npzsvy.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+        </div>
+        <div class="about-first-section-right">
+          <%= cl_image_tag("fxone-remote-graphic-4_tinbue.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="fxone-fifth-section-wrapper">
+    <%= cl_image_tag("fourth-section-top-half_yshdpy.png", :quality=>"auto", class: "fxone-fourth-section-background") %>
+    <div class="container">
+      <div class="about-section fxone-section d-flex justify-content-center">
+        <div class="fxone-fifth-section-content">
+          <%= image_tag 'about-dots.png', class: 'fxone-dots-back' %>
+          <div class="fxone-fifth-section-left">
+            <p class="bold small-text"><%= t("fxone_remote.fifth_section_left_title") %></p>
+            <ul style="padding-left: 16px;">
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_one") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_two") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_three") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_four") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_five") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_six") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_seven") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_eight") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_nine") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_ten") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_eleven") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_twelve") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_thirteen") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_left_fourteen") %></li>
+            </ul>
+          </div>
+          <div class="fxone-fifth-section-right">
+            <p class="bold small-text"><%= t("fxone_remote.fifth_section_right_title_one") %></p>
+            <ul style="padding-left: 16px;">
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_one") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_two") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_three") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_four") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_five") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_six") %></li>
+            </ul>
+            <p class="bold small-text"><%= t("fxone_remote.fifth_section_right_title_two") %></p>
+            <ul style="padding-left: 16px;">
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_seven") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_eight") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_nine") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_ten") %></li>
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_eleven") %></li>
+            </ul>
+            <p class="bold small-text"><%= t("fxone_remote.fifth_section_right_title_three") %></p>
+            <ul style="padding-left: 16px;">
+              <li class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.fifth_section_right_twelve") %></li>
+            </ul>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="fxone-sixth-section-wrapper">
+    <%#= cl_image_tag("fourth-section-middle_yezkil.png", :quality=>"auto", class: "fxone-fourth-section-background") %>
+    <div class="container">
+      <div class="fxone-sixth-section-header">
+        <%= image_tag 'fxone-icon-14.png', class: 'about-icon m-auto fxone-icon-sixth-section' %>
+        <h3 class="about-first-section-text text-center"><%= t("fxone_remote.sixth_section_title") %></h3>
+      </div>
+      <div class="about-section fxone-section fxone-sixth-section-content">
+        <div class="about-first-section-left">
+          <div class="fxone-sixth-section-check">
+            <%= image_tag 'foenix-check.png', width: 20 %>
+            <div>
+              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_one") %></p>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_one") %></p>
+            </div>
+          </div>
+          <div class="fxone-sixth-section-check">
+            <%= image_tag 'foenix-check.png', width: 20 %>
+            <div>
+              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_two") %></p>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_two") %></p>
+            </div>
+          </div>
+          <div class="fxone-sixth-section-check">
+            <%= image_tag 'foenix-check.png', width: 20 %>
+            <div>
+              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_three") %></p>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_three") %></p>
+            </div>
+          </div>
+          <div class="fxone-sixth-section-check">
+            <%= image_tag 'foenix-check.png', width: 20 %>
+            <div>
+              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_left_sub_title_four") %></p>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_left_sub_text_four") %></p>
+            </div>
+          </div>
+        </div>
+        <div class="about-first-section-right">
+          <div class="fxone-sixth-section-check">
+            <%= image_tag 'foenix-check.png', width: 20 %>
+            <div>
+              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_one") %></p>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_one") %></p>
+            </div>
+          </div>
+          <div class="fxone-sixth-section-check">
+            <%= image_tag 'foenix-check.png', width: 20 %>
+            <div>
+              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_two") %></p>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_two") %></p>
+            </div>
+          </div>
+          <div class="fxone-sixth-section-check">
+            <%= image_tag 'foenix-check.png', width: 20 %>
+            <div>
+              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_three") %></p>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_three") %></p>
+            </div>
+          </div>
+          <div class="fxone-sixth-section-check">
+            <%= image_tag 'foenix-check.png', width: 20 %>
+            <div>
+              <p class="bold small-text mb-1"><%= t("fxone_remote.sixth_section_right_sub_title_four") %></p>
+              <p class="paragraph-text" style="font-size: 12px !important; line-height: 25px !important"><%= t("fxone_remote.sixth_section_right_sub_text_four") %></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="fxone-seventh-section-wrapper">
+    <%= image_tag 'about-dots.png', class: 'fxone-seventh-section-dots' %>
+    <%= cl_image_tag("fourth-section-bottom-half_j9e2d7.png", :quality=>"auto", class: "fxone-fourth-section-background") %>
+    <div class="container">
+      <div class="about-section">
+        <div class="about-fifth-section-left">
+          <%= image_tag 'fxone-icon-15.png', class: 'about-icon' %>
+          <h3 class="about-fifth-section-text" style="padding-left: 16px;"><%= t("fxone_remote.seventh_section_title") %></h3>
+          <p class="paragraph-text about-fifth-section-text" style="padding-left: 16px;"><%= t("fxone_remote.seventh_section_text") %></p>
+        </div>
+        <div class="about-fifth-section-right">
+          <%= cl_image_tag("fxone-remote-graphic-4_lo5sz0.png", :quality=>"auto", class: "about-graphic about-graphic-two") %>
+          <%#= image_tag 'about-dots.png', class: 'about-dots-fifth' %>
+        </div>
+      </div>
+      <div class="fxone-seventh-section-video-container">
+        <div class="fxone-seventh-section-video">
+
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <%= render 'shared/newsletter' %>
