--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -1,4 +1,5 @@
 .fxone-wrapper {
+  overflow: hidden;
 }
 
 .fxone-first-section-wrapper {
@@ -13,6 +14,29 @@
 
 .fxone-third-section-wrapper {
   background-color: #FFF;
+}
+
+.fxone-fourth-section-wrapper {
+  background-color: #FFF;
+}
+
+.fxone-fifth-section-wrapper {
+  position: relative;
+  background-color: #FFF;
+  background-size: cover;
+  background-position: center;
+}
+
+.fxone-sixth-section-wrapper {
+  background: linear-gradient(#F5F6F9, #F8F9FB);
+  padding-top: 100px;
+  position: relative;
+}
+
+.fxone-seventh-section-wrapper {
+  position: relative;
+  background-color: #FFF;
+  // padding-top: 100px;
 }
 
 .fxone-section {
@@ -72,3 +96,114 @@
     padding: 0 16px;
   }
 }
+
+.fxone-fourth-section-header {
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.fxone-fourth-section-background {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.fxone-fifth-section-content {
+  position: relative;
+  margin: 30px 0;
+  background-color: #FFF;
+  padding: 32px 10px;
+  display: flex;
+  justify-content: space-evenly;
+  border-radius: 5px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+  width: 70%;
+  @include for-large-devices-down {
+    width: 80%;
+  }
+  @include for-medium-devices-down {
+    width: 100%;
+  }
+  @include for-phone-only {
+    flex-direction: column;
+  }
+}
+
+.fxone-fifth-section-left, .fxone-fifth-section-right {
+  padding: 16px;
+  width: 50%;
+  @include for-phone-only {
+    width: 100%;
+  }
+}
+
+.fxone-icon-sixth-section {
+  position: relative;
+  z-index: 5;
+}
+
+.fxone-sixth-section-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fxone-sixth-section-check {
+  display: flex;
+  align-items: flex-start;
+  img {
+    margin-right: 10px;
+  }
+}
+
+.fxone-sixth-section-content {
+  align-items: flex-start;
+  margin: auto;
+  width: 80%;
+  @include for-large-devices-down {
+    width: 90%;
+  }
+  @include for-medium-devices-down {
+    width: 100%;
+  }
+  @include for-phone-only {
+    flex-direction: column;
+  }
+}
+
+.fxone-dots-back {
+  width: 60px;
+  position: absolute;
+  bottom: -40px;
+  left: -30px;
+  z-index: 1;
+}
+
+.fxone-seventh-section-dots {
+  position: absolute;
+  right: 30px;
+  width: 60px;
+  top: 240px;
+  @include for-phone-only {
+    display: none;
+  }
+}
+
+.fxone-seventh-section-video-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 100px 0;
+}
+
+.fxone-seventh-section-video {
+  background-color: #111111;
+  width: 80%;
+  height: 500px;
+  position: relative;
+  z-index: 3;
+}
+
