--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -248,6 +248,12 @@
   }
 }
 
+.main-body-text {
+  color: #717B8D;
+  font-weight: lighter;
+  line-height: 30px;
+}
+
 .paragraph-text {
   color: #717B8D;
   font-size: 14px;
