--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,42 +1,47 @@
-<div class="container">
-  <h1 class="text-center"><%= t('faq.title') %></h1>
-  <p class="text-center w-50 mx-auto mb-5"><%= t('faq.tagline') %></p>
+<div class="faq-page">
+  <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "faq-pill") %>
+  <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "faq-pill-bottom") %>
+  <h1 class="text-center black-blue zindex2"><%= t('faq.title') %></h1>
+  <div class="space-20"></div>
+  <p class="text-center mx-auto mb-5 light-gray-thin-text lh-30 zindex2 w-50-m-80"><%= t('faq.tagline') %></p>
+  <div class="space-40"></div>
   <div class="faq-card">
     <div class="faq-card-head" id="faqTrigger-1">
-      <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <i class="fas fa-chevron-down small-chevron m-0"></i>
+      <p class="m-0 black-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
     </div>
     <div class="faq-card-body" id="faqBody1">
-      <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
+      <p class="light-gray-thin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
     </div>
   </div>
   <div class="faq-card">
     <div class="faq-card-head" id="faqTrigger-2">
-      <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <i class="fas fa-chevron-down small-chevron m-0"></i>
+      <p class="m-0 black-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
     </div>
     <div class="faq-card-body" id="faqBody2">
-      <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
+      <p class="light-gray-thin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
     </div>
   </div>
   <div class="faq-card">
     <div class="faq-card-head" id="faqTrigger-3">
-      <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <i class="fas fa-chevron-down small-chevron m-0"></i>
+      <p class="m-0 black-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
     </div>
     <div class="faq-card-body" id="faqBody3">
-      <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
+      <p class="light-gray-thin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
     </div>
   </div>
   <div class="faq-card">
     <div class="faq-card-head" id="faqTrigger-4">
-      <p class="m-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <i class="fas fa-chevron-down small-chevron m-0"></i>
+      <p class="m-0 black-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
     </div>
     <div class="faq-card-body" id="faqBody4">
-      <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
+      <p class="light-gray-thin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
     </div>
   </div>
+  <div class="space-100"></div>
 </div>
 
 <script>
