--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -1,10 +1,12 @@
 .faq-card {
-  width: 100%;
-  padding: 0 20px;
+  width: 80%;
+  padding: 10px 20px;
   background-color: #fff;
   border-radius: 4px;
   box-shadow: 2px 2px 20px rgba(0,0,0,0.1);
   margin: 20px 0;
+  position: relative;
+  z-index: 2;
 }
 
 .faq-card-head {
@@ -14,6 +16,8 @@
   align-items: center;
   height: 50px;
   cursor: pointer;
+  position: relative;
+  z-index: 2;
 }
 
 .faq-card-body {
@@ -24,8 +28,67 @@
   transition: 1s;
 }
 
+.yellow-arrow {
+  background-color: #FCEFDA;
+  color: #F4B75E;
+  padding: 5px;
+  border-radius: 50px;
+  font-size: 16px;
+}
+
 .faq-card-open {
-  border-top: 1px solid #8E8E8E;
-  height: 100px;
+  border-top: 1px solid gray;
+  height: 140px;
   padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.faq-page {
+  padding: 150px 0px 0 0px;
+  background: linear-gradient(#EDEFF4, white);
+  position: relative;
+  overflow: hidden;
+  @include absCenterColumn;
+}
+
+
+.light-gray-thin-text {
+  font-weight: 300;
+  color: #747B89;
+}
+
+
+.black-blue {
+  color: $black-blue;
+}
+
+.faq-pill {
+  position: absolute;
+  top: -100px;
+  right: -100px;
+  width: 300px;
+  height: auto;
+  z-index: 1;
+
+  @include for-medium-devices-down {
+    display: none;
+  }
+}
+
+.faq-pill-bottom {
+  position: absolute;
+  bottom: -150px;
+  left: -180px;
+  width: 300px;
+  height: auto;
+  z-index: 1;
+
+  @include for-medium-devices-down {
+    display: none;
+  }
+}
+
+.zindex2 {
+  position: relative;
+  z-index: 2;
 }
