--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "job_index";
+@import "job_show";
 @import "faq";
 @import "about";
 @import "inks_and_consumables";
