--- a/app/assets/stylesheets/pages/_inks_and_consumables.scss
+++ b/app/assets/stylesheets/pages/_inks_and_consumables.scss
@@ -59,7 +59,8 @@
   background: #FFF;
   // height: 300px;
   max-width: 400px;
-  border: 1px solid #000;
+  border: 3px solid #fafafa;
+  box-shadow: 0px 8px 10px rgba(149, 156, 169, 0.20), -1px -1px 10px rgba(156, 173, 198, 0.20);
   border-radius: 10px;
   padding: 16px;
   position: relative;
